k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: web
    tier: frontend
    role: api
  name: web
spec:
  selector:
    matchLabels:
      service: web
      tier: frontend
      role: api
  template:
    metadata:
      labels:
        service: web
        tier: frontend
        role: api
    spec:
      containers:
        - name: web
          image: gmri/neracoos-buoy-barn
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: django-static
              mountPath: /static
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1Gi
          livenessProbe:
            httpGet:
              port: http
              path: /ht/?format=json
            # If it fails 3 times in 30 seconds it will get restarted
            failureThreshold: 3
            periodSeconds: 10
          startupProbe:
            httpGet:
              port: http
              path: /ht/?format=json
            # Give it 300 seconds to start up
            failureThreshold: 30
            periodSeconds: 10
      volumes:
        - name: django-static
          emptyDir: {}
