k8s/base/prefect-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: prefect-agent
    tier: backend
    role: worker
  name: prefect-agent
spec:
  selector:
    matchLabels:
      service: prefect-agent
      tier: backend
      role: worker
  template:
    metadata:
      labels:
        service: prefect-agent
        tier: backend
        role: worker
    spec:
      containers:
        - name: prefect-agent
          image: gmri/neracoos-buoy-barn
          args:
            - python
            - manage.py
            - prefect
            - --register
            - --agent
          volumeMounts:
            - name: django-static
              mountPath: /static
      volumes:
        - name: django-static
          emptyDir: {}
