k8s/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: celery
    tier: backend
    role: worker
  name: worker
spec:
  selector:
    matchLabels:
      service: celery
      tier: backend
      role: worker
  template:
    metadata:
      labels:
        service: celery
        tier: backend
        role: worker
    spec:
      containers:
        - name: worker
          image: gmri/neracoos-buoy-barn
          args:
            - celery
            - -A
            - buoy_barn
            - worker
            - -l
            - info
          volumeMounts:
            - name: django-static
              mountPath: /static
      imagePullSecrets:
        - name: docker-hub-secret
      volumes:
        - name: django-static
          emptyDir: {}
