k8s/base/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buoy-barn-cache
spec:
  selector:
    service: redis
    tier: backend
    role: cache
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
