k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    service: web
    tier: frontend
    role: api
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    service: web
    tier: frontend
    role: api
